--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 		</dependency>
+		<!-- Logstash -->
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.3</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
