--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     url: ${POSTGRES_URL:jdbc:postgresql://localhost:5432/db_ucb_judge}
     jpa:
       hibernate:
-        ddl-auto: update
+        ddl-auto: none
   zipkin:
     base-url: ${ZIPKIN_SERVER_URI:http://localhost:9411}
 
