--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,3 +48,9 @@ keycloak:
             - GET
           patterns:
             - /api/v1/problems/*
+
+minio:
+  url: ${MINIO_SERVER_URI:http://localhost:9000}
+  access:
+    key: ${MINIO_ACCESS_KEY:c5hPg2BgTgDxxbeHNhwF}
+    secret: ${MINIO_SECRET_KEY:lDFhBBL83nE5xn5rz6VZWbwxWgtJIWeTTWae9AMv}
