--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,20 +42,21 @@ keycloak:
     - auth-roles:
       - student
       - professor
+      - uj-problems-access
       security-collections:
         - name: Get problems
           methods:
             - GET
           patterns:
             - /api/v1/problems/*
-    - auth-roles:
-      - uj-problems-access
-      security-collections:
-        - name: Check if problem exists
-          methods:
-            - GET
-          patterns:
-            - /api/v1/problems/*/exists
+#    - auth-roles:
+#      - uj-problems-access
+#      security-collections:
+#        - name: Check if problem exists
+#          methods:
+#            - GET
+#          patterns:
+#            - /api/v1/problems/*/exists
 
 minio:
   url: ${MINIO_SERVER_URI:http://localhost:9000}
