--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
 spring.cloud.config.uri=${CONFIG_SERVER_URI:http://localhost:8888}
 spring.profiles.active=${CONFIG_SERVER_PROFILE:test}
 spring.application.name=uj-problems
-# spring.cloud.config.enabled=false
+spring.cloud.config.enabled=false
 logstash.host=${LOGSTASH_SERVER_URI:localhost:5000}
